--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.sorton.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.sorton.yml
@@ -1,43 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.SortOn:enum'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.SortOn
-    fullName: Excel.SortOn
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.SortOn.cellColor:member'
-      - 'excel!Excel.SortOn.fontColor:member'
-      - 'excel!Excel.SortOn.icon:member'
-      - 'excel!Excel.SortOn.value:member'
-  - uid: 'excel!Excel.SortOn.cellColor:member'
-    name: cellColor
-    fullName: cellColor
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"CellColor"'
-  - uid: 'excel!Excel.SortOn.fontColor:member'
-    name: fontColor
-    fullName: fontColor
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"FontColor"'
-  - uid: 'excel!Excel.SortOn.icon:member'
-    name: icon
-    fullName: icon
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Icon"'
-  - uid: 'excel!Excel.SortOn.value:member'
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Value"'
+### YamlMime:TSEnum
+name: Excel.SortOn
+uid: excel!Excel.SortOn:enum
+package: excel!
+fullName: Excel.SortOn
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: cellColor
+  uid: excel!Excel.SortOn.cellColor:member
+  package: excel!
+  summary: ''
+- name: fontColor
+  uid: excel!Excel.SortOn.fontColor:member
+  package: excel!
+  summary: ''
+- name: icon
+  uid: excel!Excel.SortOn.icon:member
+  package: excel!
+  summary: ''
+- name: value
+  uid: excel!Excel.SortOn.value:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: 806912aa5326040c01404aa31594d55bdd0fba22
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49331529"
