--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartunderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartunderlinestyle.yml
@@ -1,27 +1,25 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartUnderlineStyle:enum'
-    summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ChartUnderlineStyle
-    fullName: Excel.ChartUnderlineStyle
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartUnderlineStyle.none:member'
-      - 'excel!Excel.ChartUnderlineStyle.single:member'
-  - uid: 'excel!Excel.ChartUnderlineStyle.none:member'
-    name: none
-    fullName: none
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"None"'
-  - uid: 'excel!Excel.ChartUnderlineStyle.single:member'
-    name: single
-    fullName: single
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Single"'
+### YamlMime:TSEnum
+name: Excel.ChartUnderlineStyle
+uid: excel!Excel.ChartUnderlineStyle:enum
+package: excel!
+fullName: Excel.ChartUnderlineStyle
+summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: none
+  uid: excel!Excel.ChartUnderlineStyle.none:member
+  package: excel!
+  summary: ''
+- name: single
+  uid: excel!Excel.ChartUnderlineStyle.single:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: 93f004ace3f85b49355487d8fc8e171c37a23e83
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49331431"
