--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartaxesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartaxesdata.yml
@@ -1,62 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartAxesData:interface'
-    summary: 描述通过调用返回的数据的接口`chartAxes.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartAxesData
-    fullName: Excel.Interfaces.ChartAxesData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartAxesData#categoryAxis:member'
-      - 'excel!Excel.Interfaces.ChartAxesData#seriesAxis:member'
-      - 'excel!Excel.Interfaces.ChartAxesData#valueAxis:member'
-  - uid: 'excel!Excel.Interfaces.ChartAxesData#categoryAxis:member'
-    summary: |-
-      表示图表中的类别轴。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartAxesData
+uid: excel!Excel.Interfaces.ChartAxesData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartAxesData
+summary: 描述通过调用返回的数据的接口 `chartAxes.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: categoryAxis
+  uid: excel!Excel.Interfaces.ChartAxesData#categoryAxis:member
+  package: excel!
+  fullName: categoryAxis
+  summary: >-
+    表示图表中的类别轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: categoryAxis
-    fullName: categoryAxis
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'categoryAxis?: Excel.Interfaces.ChartAxisData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxisData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartAxesData#seriesAxis:member'
-    summary: |-
-      表示三维图表的系列轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: seriesAxis
-    fullName: seriesAxis
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'seriesAxis?: Excel.Interfaces.ChartAxisData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxisData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartAxesData#valueAxis:member'
-    summary: |-
-      表示坐标轴中的数值轴。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'categoryAxis?: Excel.Interfaces.ChartAxisData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisData:interface" />
+- name: seriesAxis
+  uid: excel!Excel.Interfaces.ChartAxesData#seriesAxis:member
+  package: excel!
+  fullName: seriesAxis
+  summary: >-
+    表示三维图表的系列轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: valueAxis
-    fullName: valueAxis
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'valueAxis?: Excel.Interfaces.ChartAxisData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxisData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartAxisData:interface'
-    name: Excel.Interfaces.ChartAxisData
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'seriesAxis?: Excel.Interfaces.ChartAxisData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisData:interface" />
+- name: valueAxis
+  uid: excel!Excel.Interfaces.ChartAxesData#valueAxis:member
+  package: excel!
+  fullName: valueAxis
+  summary: >-
+    表示坐标轴中的数值轴。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'valueAxis?: Excel.Interfaces.ChartAxisData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisData:interface" />
+metadata:
+  ms.openlocfilehash: 53917a61b417bb4f9125810375a44747b54e2acf
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49331151"
