--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsdata.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData:interface'
-    summary: 描述通过调用返回的数据的接口`chartPivotOptions.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartPivotOptionsData
-    fullName: Excel.Interfaces.ChartPivotOptionsData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartPivotOptionsData#showAxisFieldButtons:member'
-      - 'excel!Excel.Interfaces.ChartPivotOptionsData#showLegendFieldButtons:member'
-      - 'excel!Excel.Interfaces.ChartPivotOptionsData#showReportFilterFieldButtons:member'
-      - 'excel!Excel.Interfaces.ChartPivotOptionsData#showValueFieldButtons:member'
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData#showAxisFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图中显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartPivotOptionsData
+uid: excel!Excel.Interfaces.ChartPivotOptionsData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartPivotOptionsData
+summary: 描述通过调用返回的数据的接口 `chartPivotOptions.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: showAxisFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsData#showAxisFieldButtons:member
+  package: excel!
+  fullName: showAxisFieldButtons
+  summary: >-
+    指定是否在数据透视图中显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showAxisFieldButtons
-    fullName: showAxisFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showAxisFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData#showLegendFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图上显示图例字段按钮。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showLegendFieldButtons
-    fullName: showLegendFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showLegendFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData#showReportFilterFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图上显示报表筛选字段按钮。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showAxisFieldButtons?: boolean;'
+    return:
+      type: boolean
+- name: showLegendFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsData#showLegendFieldButtons:member
+  package: excel!
+  fullName: showLegendFieldButtons
+  summary: >-
+    指定是否在数据透视图上显示图例字段按钮。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showReportFilterFieldButtons
-    fullName: showReportFilterFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showReportFilterFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData#showValueFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图中显示 "显示值" 字段按钮。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showValueFieldButtons
-    fullName: showValueFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showValueFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showLegendFieldButtons?: boolean;'
+    return:
+      type: boolean
+- name: showReportFilterFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsData#showReportFilterFieldButtons:member
+  package: excel!
+  fullName: showReportFilterFieldButtons
+  summary: >-
+    指定是否在数据透视图上显示报表筛选字段按钮。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showReportFilterFieldButtons?: boolean;'
+    return:
+      type: boolean
+- name: showValueFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsData#showValueFieldButtons:member
+  package: excel!
+  fullName: showValueFieldButtons
+  summary: >-
+    指定是否在数据透视图中显示 "显示值" 字段按钮。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showValueFieldButtons?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: c3af55ed30d87abfce92c0e455f23b711d090c4d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330983"
