--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsloadoptions.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface'
-    summary: |-
-      封装数据透视图的选项。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartPivotOptionsLoadOptions
+uid: excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartPivotOptionsLoadOptions
+summary: >-
+  封装数据透视图的选项。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartPivotOptionsLoadOptions
-    fullName: Excel.Interfaces.ChartPivotOptionsLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showAxisFieldButtons:member'
-      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showLegendFieldButtons:member'
-      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showReportFilterFieldButtons:member'
-      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showValueFieldButtons:member'
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showAxisFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图中显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showAxisFieldButtons
-    fullName: showAxisFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showAxisFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showLegendFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图上显示图例字段按钮。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: showAxisFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showAxisFieldButtons:member
+  package: excel!
+  fullName: showAxisFieldButtons
+  summary: >-
+    指定是否在数据透视图中显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showLegendFieldButtons
-    fullName: showLegendFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showLegendFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showReportFilterFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图上显示报表筛选字段按钮。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showReportFilterFieldButtons
-    fullName: showReportFilterFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showReportFilterFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showValueFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图中显示 "显示值" 字段按钮。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showAxisFieldButtons?: boolean;'
+    return:
+      type: boolean
+- name: showLegendFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showLegendFieldButtons:member
+  package: excel!
+  fullName: showLegendFieldButtons
+  summary: >-
+    指定是否在数据透视图上显示图例字段按钮。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showValueFieldButtons
-    fullName: showValueFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showValueFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showLegendFieldButtons?: boolean;'
+    return:
+      type: boolean
+- name: showReportFilterFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showReportFilterFieldButtons:member
+  package: excel!
+  fullName: showReportFilterFieldButtons
+  summary: >-
+    指定是否在数据透视图上显示报表筛选字段按钮。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showReportFilterFieldButtons?: boolean;'
+    return:
+      type: boolean
+- name: showValueFieldButtons
+  uid: excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showValueFieldButtons:member
+  package: excel!
+  fullName: showValueFieldButtons
+  summary: >-
+    指定是否在数据透视图中显示 "显示值" 字段按钮。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showValueFieldButtons?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 849bfeaa71138e82050d6389f508cac807ad1ccc
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330990"
